# uniffi_test

./: Cargo.toml  README.md  build-xcframework.sh  build.rs
src/: lib.rs
swift/BugFinder/: Package.swift  README.md
swift/BugFinder/Sources/BugFinder/: bug_finder.swift
swift/BugFinder/Tests/BugFinderTests/: BugFinderTests.swift
uniffi/: bug_finder.udl
